feat: 운영 환경 수준 보안 시스템 구축
## 인증/인가
- JWT Access/Refresh Token 분리 (JJWT 0.12.6, HS256)
- Stateless Stateless 세션 + Role 기반 권한 (WM/SA/US)
- CustomUserDetails/UserDetailsService, JwtTokenProvider
- AuthService: 로그인·토큰 재발급·로그인 실패 감사 로그
- POST /api/auth/refresh 엔드포인트 추가

## 필터 체인 (순서: 1→4 + JWT)
- MdcTraceFilter(1): TraceId 생성·MDC 전파
- RequestCachingFilter(2): Request Body 재사용 가능하게 캐싱
- XssProtectionFilter(3): commons-text HTML 이스케이프
- RateLimitFilter(4): Bucket4j IP별 100req/60s 제한
- JwtAuthenticationFilter: Bearer 토큰 검증 후 SecurityContext 설정

## 인터셉터
- LoggingInterceptor: 요청/응답 시간 측정, 사용자/URI/상태코드 로깅
- AdminAuditInterceptor: WM/SA 역할 API 호출 감사 로그 비동기 저장
- ApiAccessInterceptor: sqlmap/nikto 등 악성 UA 차단

## AOP
- @RequireRole: 메서드 레벨 역할 검증 커스텀 어노테이션
- @AuditLog: 서비스 메서드 성공/실패 감사 로그 어노테이션
- SecurityAuditAspect: 위 어노테이션 처리 Aspect
- PerformanceAspect: Service 레이어 실행 시간 측정 (1초 초과 시 WARN)

## 보안 강화
- SecurityConfig: CSRF 비활성, CORS 세밀 제어, HSTS, CSP, Referrer-Policy
- 엔드포인트별 인증 규칙 (공개/인증필요/관리자전용)
- CustomAuthenticationEntryPoint/AccessDeniedHandler: 표준 JSON 오류 응답

## 감사/예외
- SecurityAuditLog 엔티티 + 비동기 저장 (AuditLogService)
- 로그인 성공/실패, 관리자 행위, 서비스 감사 추적
- ErrorCode 체계, ApiResponse<T> 표준 응답 포맷
- GlobalExceptionHandler: 보안/검증/파일/일반 예외 통합 처리

## 공통
- SecurityUtil: SecurityContext에서 현재 사용자 정보 조회
- AsyncConfig: @Async 활성화 (감사 로그 비동기 처리)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>